gap fixed

--- a/React Practise/note-typescript/src/App.css
+++ b/React Practise/note-typescript/src/App.css
@@ -121,7 +121,7 @@
 
 .noteitem--buttons {
   display: flex;
-  gap: 8px;
+  gap: 12px;
 }
 
 .noteitem--buttons button {
